--- a/Database_and_SQL_Final_Project_Pt_3_erik_danielson.ipynb
+++ b/Database_and_SQL_Final_Project_Pt_3_erik_danielson.ipynb
@@ -356,9 +356,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e4ff814-8ec3-4004-c983-3b9ab2206cd7"
+        "outputId": "7adb4eeb-aaab-49e3-bcfa-430c68eb26a4"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 59
         }
       ]
     },
@@ -470,35 +470,10 @@
         "--I don't think I need this last one because the classroom is already in the classes table"
       ],
       "metadata": {
-        "id": "rQ9CiBEREYCC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "68dc5cf8-8daa-4c20-9369-1acc12fe5f78"
+        "id": "rQ9CiBEREYCC"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " * postgresql://postgres:***@localhost/my_data\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "Done.\n",
-            "(psycopg2.ProgrammingError) can't execute an empty query\n",
-            "[SQL: --I don't think I need this one because the classroom is already in the classes table but ¯\\_(ツ)_/¯]\n",
-            "(Background on this error at: https://sqlalche.me/e/14/f405)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -554,21 +529,6 @@
       "metadata": {
         "id": "_-a4-KWT0JUj"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%sql \n",
-        "-- If you make mistakes, you might need to delete existing data from your tables. \n",
-        "-- One way you might do this is as follows\n",
-        "-- You might need to include different table names!\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "S1DJTS-SN6rh"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -632,54 +592,10 @@
         "  VALUES(101, 721, 67000.00, '2010-02-28');\n"
       ],
       "metadata": {
-        "id": "fjZx_LAh0IQI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "30163a37-b024-434b-e067-6bbc5d001078"
+        "id": "fjZx_LAh0IQI"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " * postgresql://postgres:***@localhost/my_data\n",
-            "0 rows affected.\n",
-            "0 rows affected.\n",
-            "0 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n",
-            "1 rows affected.\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -689,10 +605,152 @@
         "JOIN Students ON Monsters.MonsterID = Students.monster_id;"
       ],
       "metadata": {
-        "id": "NG1sqAAVRwVh"
+        "id": "NG1sqAAVRwVh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        },
+        "outputId": "bac451d7-6577-47a3-a0b3-e39ee91fed59"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://postgres:***@localhost/my_data\n",
+            "6 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(674, 'Cookie', 'Monster', None, datetime.date(1969, 11, 10), 'Cookie.Monster@MU.edu', None, 'Cookies', 479, 674, 'Baking', Decimal('3.20'), 88),\n",
+              " (832, 'Chewbacca', None, None, datetime.date(1977, 5, 25), 'Chewbacca@MU.edu', 'Wookie', 'Omivore', 352, 832, 'Aviation', Decimal('2.60'), 36),\n",
+              " (763, 'Vlad', 'Dracula', None, datetime.date(1543, 8, 15), 'CountDracula@MU.edu', 'Vampire', 'Blood', 666, 763, 'History', Decimal('4.00'), 124),\n",
+              " (324, 'Maleficient', None, None, datetime.date(1856, 10, 26), 'Maleficient@MU.edu', 'Dragon', 'Carnivore', 432, 324, 'Magic', Decimal('3.80'), 75),\n",
+              " (999, 'John', 'Smith', 'A', datetime.date(1990, 7, 20), 'JohnSmith@MU.edu', 'Human', 'Omnivore', 1000, 999, 'Geology', Decimal('3.44'), 32),\n",
+              " (1266, 'Smaug', None, None, None, 'Smaug@MU.edu', 'Dragon', 'Carnivore', 805, 1266, 'Accouting', Decimal('2.87'), 24)]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>monsterid</th>\n",
+              "            <th>firstname</th>\n",
+              "            <th>lastname</th>\n",
+              "            <th>initial</th>\n",
+              "            <th>dob</th>\n",
+              "            <th>email</th>\n",
+              "            <th>species</th>\n",
+              "            <th>diet</th>\n",
+              "            <th>studentid</th>\n",
+              "            <th>monster_id</th>\n",
+              "            <th>major</th>\n",
+              "            <th>gpa</th>\n",
+              "            <th>credits</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>674</td>\n",
+              "            <td>Cookie</td>\n",
+              "            <td>Monster</td>\n",
+              "            <td>None</td>\n",
+              "            <td>1969-11-10</td>\n",
+              "            <td>Cookie.Monster@MU.edu</td>\n",
+              "            <td>None</td>\n",
+              "            <td>Cookies</td>\n",
+              "            <td>479</td>\n",
+              "            <td>674</td>\n",
+              "            <td>Baking</td>\n",
+              "            <td>3.20</td>\n",
+              "            <td>88</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>832</td>\n",
+              "            <td>Chewbacca</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>1977-05-25</td>\n",
+              "            <td>Chewbacca@MU.edu</td>\n",
+              "            <td>Wookie</td>\n",
+              "            <td>Omivore</td>\n",
+              "            <td>352</td>\n",
+              "            <td>832</td>\n",
+              "            <td>Aviation</td>\n",
+              "            <td>2.60</td>\n",
+              "            <td>36</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>763</td>\n",
+              "            <td>Vlad</td>\n",
+              "            <td>Dracula</td>\n",
+              "            <td>None</td>\n",
+              "            <td>1543-08-15</td>\n",
+              "            <td>CountDracula@MU.edu</td>\n",
+              "            <td>Vampire</td>\n",
+              "            <td>Blood</td>\n",
+              "            <td>666</td>\n",
+              "            <td>763</td>\n",
+              "            <td>History</td>\n",
+              "            <td>4.00</td>\n",
+              "            <td>124</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>324</td>\n",
+              "            <td>Maleficient</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>1856-10-26</td>\n",
+              "            <td>Maleficient@MU.edu</td>\n",
+              "            <td>Dragon</td>\n",
+              "            <td>Carnivore</td>\n",
+              "            <td>432</td>\n",
+              "            <td>324</td>\n",
+              "            <td>Magic</td>\n",
+              "            <td>3.80</td>\n",
+              "            <td>75</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>999</td>\n",
+              "            <td>John</td>\n",
+              "            <td>Smith</td>\n",
+              "            <td>A</td>\n",
+              "            <td>1990-07-20</td>\n",
+              "            <td>JohnSmith@MU.edu</td>\n",
+              "            <td>Human</td>\n",
+              "            <td>Omnivore</td>\n",
+              "            <td>1000</td>\n",
+              "            <td>999</td>\n",
+              "            <td>Geology</td>\n",
+              "            <td>3.44</td>\n",
+              "            <td>32</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>1266</td>\n",
+              "            <td>Smaug</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>Smaug@MU.edu</td>\n",
+              "            <td>Dragon</td>\n",
+              "            <td>Carnivore</td>\n",
+              "            <td>805</td>\n",
+              "            <td>1266</td>\n",
+              "            <td>Accouting</td>\n",
+              "            <td>2.87</td>\n",
+              "            <td>24</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -702,10 +760,115 @@
         "JOIN Teachers ON Monsters.MonsterID = Teachers.monster_id;"
       ],
       "metadata": {
-        "id": "vfcBeYYHRxGx"
+        "id": "vfcBeYYHRxGx",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 161
+        },
+        "outputId": "429b5a7c-bed8-466a-d020-8752577663c7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * postgresql://postgres:***@localhost/my_data\n",
+            "4 rows affected.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(475, 'Marceline', None, None, datetime.date(1056, 3, 2), 'Marceline@MU.edu', 'Vampire', 'Red', 159, 475, Decimal('80000.00'), datetime.date(1066, 5, 14)),\n",
+              " (763, 'Vlad', 'Dracula', None, datetime.date(1543, 8, 15), 'CountDracula@MU.edu', 'Vampire', 'Blood', 791, 763, Decimal('90000.00'), datetime.date(1600, 3, 17)),\n",
+              " (721, 'Fiona', None, None, datetime.date(2001, 5, 18), 'Fiona@MU.edu', 'Ogre', 'Omnimore', 101, 721, Decimal('67000.00'), datetime.date(2010, 2, 28)),\n",
+              " (720, 'Shrek', None, None, datetime.date(2001, 5, 18), 'Shrek@MU.edu', 'Ogre', 'Omnimore', 100, 720, Decimal('70000.00'), datetime.date(2010, 2, 28))]"
+            ],
+            "text/html": [
+              "<table>\n",
+              "    <thead>\n",
+              "        <tr>\n",
+              "            <th>monsterid</th>\n",
+              "            <th>firstname</th>\n",
+              "            <th>lastname</th>\n",
+              "            <th>initial</th>\n",
+              "            <th>dob</th>\n",
+              "            <th>email</th>\n",
+              "            <th>species</th>\n",
+              "            <th>diet</th>\n",
+              "            <th>teacherid</th>\n",
+              "            <th>monster_id</th>\n",
+              "            <th>salary</th>\n",
+              "            <th>hiredate</th>\n",
+              "        </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "        <tr>\n",
+              "            <td>475</td>\n",
+              "            <td>Marceline</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>1056-03-02</td>\n",
+              "            <td>Marceline@MU.edu</td>\n",
+              "            <td>Vampire</td>\n",
+              "            <td>Red</td>\n",
+              "            <td>159</td>\n",
+              "            <td>475</td>\n",
+              "            <td>80000.00</td>\n",
+              "            <td>1066-05-14</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>763</td>\n",
+              "            <td>Vlad</td>\n",
+              "            <td>Dracula</td>\n",
+              "            <td>None</td>\n",
+              "            <td>1543-08-15</td>\n",
+              "            <td>CountDracula@MU.edu</td>\n",
+              "            <td>Vampire</td>\n",
+              "            <td>Blood</td>\n",
+              "            <td>791</td>\n",
+              "            <td>763</td>\n",
+              "            <td>90000.00</td>\n",
+              "            <td>1600-03-17</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>721</td>\n",
+              "            <td>Fiona</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>2001-05-18</td>\n",
+              "            <td>Fiona@MU.edu</td>\n",
+              "            <td>Ogre</td>\n",
+              "            <td>Omnimore</td>\n",
+              "            <td>101</td>\n",
+              "            <td>721</td>\n",
+              "            <td>67000.00</td>\n",
+              "            <td>2010-02-28</td>\n",
+              "        </tr>\n",
+              "        <tr>\n",
+              "            <td>720</td>\n",
+              "            <td>Shrek</td>\n",
+              "            <td>None</td>\n",
+              "            <td>None</td>\n",
+              "            <td>2001-05-18</td>\n",
+              "            <td>Shrek@MU.edu</td>\n",
+              "            <td>Ogre</td>\n",
+              "            <td>Omnimore</td>\n",
+              "            <td>100</td>\n",
+              "            <td>720</td>\n",
+              "            <td>70000.00</td>\n",
+              "            <td>2010-02-28</td>\n",
+              "        </tr>\n",
+              "    </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
     },
     {
       "cell_type": "code",
